--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ scraper="0.20.0"
 chrono ="0.4.38"
 chrono-tz = "0.10.0"
 clap = { version = "4.0", features = ["derive"] }
-
+appindicator3 = "0.2.0"
+gtk = "0.15"
 
 [dev-dependencies]
 mockito = "0.30.0"
