--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sport-scrape"
+name = "prop-time"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,3 +14,10 @@ gtk = "0.15"
 
 [dev-dependencies]
 mockito = "0.30.0"
+
+[package.metadata.deb]
+maintainer = "Charlie Giese <cmggiese@gmail.com>"
+copyright = "2025, Charlie Giese"
+depends = "libgtk-3-0, libappindicator3-1" # If needed
+extended-description = "A system tray app for rugby fixtures"
+section = "utilit"
