--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ chrono-tz = "0.10.0"
 clap = { version = "4.0", features = ["derive"] }
 appindicator3 = "0.2.0"
 gtk = "0.15"
+serde = { version = "1", features = ["derive"] }
+toml = "0.8"
+config = "0.14"
 
 [dev-dependencies]
 mockito = "0.30.0"
